---
source: src/engine.rs
expression: decision
---
{
  "Allow": {
    "policy": {
      "literal": "permit (\n    principal == User::\"bob\",\n    action == Action::\"view\",\n    resource == Photo::\"VacationPhoto94.jpg\"\n);",
      "json": {
        "effect": "permit",
        "principal": {
          "op": "==",
          "entity": {
            "type": "User",
            "id": "bob"
          }
        },
        "action": {
          "op": "==",
          "entity": {
            "type": "Action",
            "id": "view"
          }
        },
        "resource": {
          "op": "==",
          "entity": {
            "type": "Photo",
            "id": "VacationPhoto94.jpg"
          }
        },
        "conditions": []
      }
    },
    "version": {
      "hash": "367a1bf718b961945a55eb68ef47778eab2db0ed787476147c9a77dd83833686",
      "loaded_at": "[timestamp]"
    }
  }
}
